# Integer

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  Integer.h  IntegerConfig.cmake.in  LICENSE  README.md  basic_usage.cpp
.github/workflows/: ci.yml
examples/: CMakeLists.txt  advanced_demo.cpp  basic_usage.cpp  bench_integer_vs_gmp.cpp  thread_safety.cpp
tests/: CMakeLists.txt  integer_cli  integer_cli.cpp  integer_cli_fallback  run_tests.py
